--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,6 +3,7 @@
 
 @import "components.css";
 @import "app.css";
+@import "tippy.css";
 
 /* Remove the next import if you do not use coding snippets */
 @import "github-dark.css";
