Make navigation pills clickable

--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -21,7 +21,11 @@
     .NavigationItem {
         @apply leading-loose rounded-md text-sm
         transition-colors duration-300 dark:text-gray-300
-        text-gray-800 font-semibold px-4 py-1;
+        text-gray-800 font-semibold;
+    }
+
+    .NavigationItem a {
+        @apply px-4 py-1 block;
     }
 
     .NavigationItemNotActive {
