--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -277,11 +277,11 @@
 
     /* Popover.tsx */
     button.PopoverButton {
-        @apply flex flex-row shadow hover:shadow-md py-2 px-4
-        dark:hover:bg-black-400 dark:active:bg-black-500 flex-1
+        @apply flex flex-row shadow hover:shadow-md py-2 px-3
+        dark:hover:bg-black-200 dark:active:bg-black-500
         items-center w-full dark:bg-black-300 rounded-md
         bg-gray-50 duration-300 hover:bg-gray-100
-        outline-primary-300 focus:outline-2;
+        outline-primary-300 focus:outline-2 ellipsify;
     }
 
     button.PopoverButtonActive {
